--- a/Spring2016/Power Systems/project3/3phase circuit-PSpiceFiles/SCHEMATIC1/3phase power/3phase power.out.1
+++ b/Spring2016/Power Systems/project3/3phase circuit-PSpiceFiles/SCHEMATIC1/3phase power/3phase power.out.1
@@ -1,7 +1,7 @@
-
-**** 10/07/11 08:25:53 ******* PSpice 16.3.0 (June 2009) ****** ID# 0 ********
 
- ** Profile: "SCHEMATIC1-3phase power"  [ H:\(2011-10-2) HVDC Lab\3phase circuit-pspicefiles\schematic1\3phase power.sim ] 
+**** 03/28/16 13:17:36 ***** PSpice 16.6.0 (October 2012) ***** ID# 0 ********
+
+ ** Profile: "SCHEMATIC1-3phase power"  [ H:\WinterIsComing\Spring2016\Power Systems\project3\3phase circuit-pspicefiles\schematic1\3
 
 
  ****     CIRCUIT DESCRIPTION
@@ -18,12 +18,13 @@
 *Libraries: 
 * Profile Libraries :
 * Local Libraries :
-* From [PSPICE NETLIST] section of C:\Cadence\SPB_16.3\tools\PSpice\PSpice.ini file:
+* From [PSPICE NETLIST] section of H:\cdssetup\OrCAD_PSpice/16.6.0/PSpice.ini file:
 .lib "nom.lib" 
 
 *Analysis directives: 
 .TRAN  0 0.575 0.5 0.00001 
-.PROBE V(alias(*)) I(alias(*)) W(alias(*)) D(alias(*)) NOISE(alias(*)) 
+.OPTIONS ADVCONV
+.PROBE64 V(alias(*)) I(alias(*)) W(alias(*)) D(alias(*)) NOISE(alias(*)) 
 .INC "..\SCHEMATIC1.net" 
 
 
@@ -31,58 +32,51 @@
 **** INCLUDING SCHEMATIC1.net ****
 * source 3PHASE CIRCUIT
 V_VSa         N00214 0  
-+SIN 0 89.81 60 0 0 0
++SIN 0 -99 -99 0 0 0
 V_VSc         N00271 0  
-+SIN 0 89.81 60 0 0 +120deg
++SIN 0 -99 -99 0 0 +120deg
 V_VSb         N00812 0  
-+SIN 0 89.81 60 0 0 -120deg
++SIN 0 -99 -99 0 0 -120deg
 L_LSynchB         N00812 N07164  4.1484mH  
-L_LSynchA         N00214 N15571  4.1484mH  
-L_LSynchC         N00271 N07168  4.1484mH  
+L_LSynchA         N00214 N07160  4.1484mH  
+L_LSynchC         N00271 N07211  4.1484mH  
 R_RLine         N04779 N01314  1 TC=0,0 
 L_LLine         N01314 N05645  10mH  
 C_half_CLine         N07258 N04779  50uF  TC=0,0 
 C_half_CLine2         N07258 N05645  50uF  TC=0,0 
 D_D9         N07258 N07164 D1N1190 
-D_D10         N07168 N04779 D1N1190 
-D_D11         N07258 N07168 D1N1190 
+D_D10         N07211 N04779 D1N1190 
+D_D11         N07258 N07211 D1N1190 
 D_D12         N07164 N04779 D1N1190 
 D_D13         N07160 N04779 D1N1190 
 D_D14         N07258 N07160 D1N1190 
-X_S1    N08900 0 N05645 N09428 SCHEMATIC1_S1 
+X_S1    N08900 0 N08922 N05645 SCHEMATIC1_S1 
 V_V1         N08900 0  
 +PULSE 0 1 1u 1u 1u 8.33ms 16.66ms
-D_D15         N09428 N05645 D1N1190 
+D_D15         N05645 N08922 D1N1190 
 V_V2         N10017 0  
 +PULSE 0 1 8.33ms 1u 1u 8.33ms 16.66ms
-X_S2    N10017 0 N09428 N07258 SCHEMATIC1_S2 
-D_D16         N07258 N09428 D1N1190 
-X_S4    N11336 0 N11234 N07258 SCHEMATIC1_S4 
-D_D17         N11234 N05645 D1N1190 
+X_S2    N10017 0 N05645 N10087 SCHEMATIC1_S2 
+D_D16         N10087 N05645 D1N1190 
+X_S4    N11336 0 N05645 N10087 SCHEMATIC1_S4 
+D_D17         N05645 N08922 D1N1190 
 V_V4         N11336 0  
-+PULSE 0 1 13.88ms 1u 1u 8.33ms 16.66ms
++PULSE 0 1 -99 1u 1u -99 -99
 V_V3         N11172 0  
 +PULSE 0 1 5.55ms 1u 1u 8.33ms 16.66ms
-X_S3    N11172 0 N05645 N11234 SCHEMATIC1_S3 
-D_D18         N07258 N11234 D1N1190 
-D_D20         N07258 N11916 D1N1190 
-X_S6    N12018 0 N11916 N07258 SCHEMATIC1_S6 
+X_S3    N11172 0 N08922 N05645 SCHEMATIC1_S3 
+D_D18         N10087 N05645 D1N1190 
+D_D20         N10087 N05645 D1N1190 
+X_S6    N12018 0 N05645 N10087 SCHEMATIC1_S6 
 V_V5         N11854 0  
-+PULSE 0 1 11.1ms 1u 1u 8.33ms 16.66ms
-X_S5    N11854 0 N05645 N11916 SCHEMATIC1_S5 
-D_D19         N11916 N05645 D1N1190 
++PULSE 0 1 -99 1u 1u -99 -99
+X_S5    N11854 0 N08922 N05645 SCHEMATIC1_S5 
+D_D19         N05645 N08922 D1N1190 
 V_V6         N12018 0  
-+PULSE 0 1 19.43ms 1u 1u 8.33ms 16.66ms
-R_RLoadA         0 N09428  5 TC=0,0 
-R_RLoadB         N11234 0  5 TC=0,0 
-R_RLoadC         0 N11916  5 TC=0,0 
-C_C2         0 N07164  0.000005u  TC=0,0 
-C_C3         0 N07168  0.000005u  TC=0,0 
-C_C4         0 N09428  5m  TC=0,0 
-L_L1         0 N09428  1.4m  
-C_C5         0 N15571  5m  TC=0,0 
-L_L2         N15571 0  1.4m  
-R_R1         N15571 N07160  0.1 TC=0,0 
++PULSE 0 1 -99 1u 1u -99 -99
+R_RLoadA         0 N05645  5 TC=0,0 
+R_RLoadB         N05645 0  5 TC=0,0 
+R_RLoadC         0 N05645  5 TC=0,0 
 
 .subckt SCHEMATIC1_S1 1 2 3 4  
 S_S1         3 4 1 2 _S1
@@ -122,6 +116,86 @@ RS_S5         1 2 1G
 
 **** RESUMING "3phase power.cir" ****
 .END
+
+**** 03/28/16 13:17:36 ***** PSpice 16.6.0 (October 2012) ***** ID# 0 ********
 
-ERROR -- Voltage source and/or inductor loop involving L_LSynchA
-You may break the loop by adding a series resistance
+ ** Profile: "SCHEMATIC1-3phase power"  [ H:\WinterIsComing\Spring2016\Power Systems\project3\3phase circuit-pspicefiles\schematic1\3
+
+
+ ****     Diode MODEL PARAMETERS
+
+
+******************************************************************************
+
+
+
+
+               D1N1190         
+          IS    1.331000E-06 
+           N    2.108        
+         ISR   40.740000E-06 
+         IKF   11.73         
+          BV  400            
+         IBV  100.000000E-06 
+          RS    1.029000E-03 
+          TT    5.000000E-09 
+         CJO    1.000000E-12 
+          VJ     .7          
+
+
+**** 03/28/16 13:17:36 ***** PSpice 16.6.0 (October 2012) ***** ID# 0 ********
+
+ ** Profile: "SCHEMATIC1-3phase power"  [ H:\WinterIsComing\Spring2016\Power Systems\project3\3phase circuit-pspicefiles\schematic1\3
+
+
+ ****     Voltage Controlled Switch MODEL PARAMETERS
+
+
+******************************************************************************
+
+
+
+
+               X_S1._S1        X_S2._S2        X_S4._S4        X_S3._S3        
+         RON    1               1               1               1            
+        ROFF    1.000000E+06    1.000000E+06    1.000000E+06    1.000000E+06 
+         VON    1               1               1               1            
+        VOFF    0               0               0               0            
+
+
+               X_S6._S6        X_S5._S5        
+         RON    1               1            
+        ROFF    1.000000E+06    1.000000E+06 
+         VON    1               1            
+        VOFF    0               0            
+
+
+ERROR(ORPSIM-15667): Pulse Delay must be >= 0 for V_V4.
+
+WARNING(ORPSIM-15451): Pulse Width must be >= 0 for V_V4. Running simulation with pulse width set as 0
+
+ERROR(ORPSIM-15667): Pulse Delay must be >= 0 for V_V5.
+
+WARNING(ORPSIM-15451): Pulse Width must be >= 0 for V_V5. Running simulation with pulse width set as 0
+
+ERROR(ORPSIM-15667): Pulse Delay must be >= 0 for V_V6.
+
+WARNING(ORPSIM-15451): Pulse Width must be >= 0 for V_V6. Running simulation with pulse width set as 0
+
+
+          JOB ABORTED
+
+**** 03/28/16 13:17:36 ***** PSpice 16.6.0 (October 2012) ***** ID# 0 ********
+
+ ** Profile: "SCHEMATIC1-3phase power"  [ H:\WinterIsComing\Spring2016\Power Systems\project3\3phase circuit-pspicefiles\schematic1\3
+
+
+ ****     JOB STATISTICS SUMMARY
+
+
+******************************************************************************
+
+
+
+  Total job time                    =         .38
+
